// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonDropdown should render multiple types 1`] = `
<div>
  <div
    class="jsx-4250971365 btn-dropdown "
  >
    <button
      class="jsx-3437962354 "
    >
      Auto Mini
    </button>
    <details
      class="jsx-4250971365"
    >
      <summary
        class="jsx-4250971365"
      >
        <svg
          class="jsx-3359574434"
          fill="none"
          height="2.5rem"
          shape-rendering="geometricPrecision"
          stroke="#666"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1"
          style="color: rgb(102, 102, 102);"
          viewBox="0 0 24 24"
          width="2.5rem"
        >
          <path
            class="jsx-3359574434"
            d="M6 9l6 6 6-6"
          />
        </svg>
      </summary>
      <div
        class="jsx-4250971365 content"
      >
        <button
          class="jsx-1829540994 "
        >
          Auto Mini
        </button>
        <button
          class="jsx-2107073986 "
        >
          Auto Mini
        </button>
      </div>
    </details>
  </div>
</div>
`;

exports[`ButtonDropdown should support types and sizes 1`] = `
<div>
  <div
    class="jsx-530256198 btn-dropdown "
  >
    <button
      class="jsx-2685698046 "
    >
      Auto Mini
    </button>
    <details
      class="jsx-530256198"
    >
      <summary
        class="jsx-530256198"
      >
        <svg
          class="jsx-3359574434"
          fill="none"
          height="1.5rem"
          shape-rendering="geometricPrecision"
          stroke="#666"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1"
          style="color: rgb(102, 102, 102);"
          viewBox="0 0 24 24"
          width="1.5rem"
        >
          <path
            class="jsx-3359574434"
            d="M6 9l6 6 6-6"
          />
        </svg>
      </summary>
      <div
        class="jsx-530256198 content"
      />
    </details>
  </div>
  <div
    class="jsx-3992976690 btn-dropdown "
  >
    <button
      class="jsx-1337148082 "
    >
      Auto Mini
    </button>
    <details
      class="jsx-3992976690"
    >
      <summary
        class="jsx-3992976690"
      >
        <svg
          class="jsx-3359574434"
          fill="none"
          height="2.75rem"
          shape-rendering="geometricPrecision"
          stroke="#666"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1"
          style="color: rgb(102, 102, 102);"
          viewBox="0 0 24 24"
          width="2.75rem"
        >
          <path
            class="jsx-3359574434"
            d="M6 9l6 6 6-6"
          />
        </svg>
      </summary>
      <div
        class="jsx-3992976690 content"
      />
    </details>
  </div>
  <div
    class="jsx-93118647 btn-dropdown "
  >
    <button
      class="jsx-1042446509 "
    >
      Secondary Action
    </button>
    <details
      class="jsx-93118647"
    >
      <summary
        class="jsx-93118647"
      >
        <svg
          class="jsx-3359574434"
          fill="none"
          height="2.5rem"
          shape-rendering="geometricPrecision"
          stroke="#fff"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 24 24"
          width="2.5rem"
        >
          <path
            class="jsx-3359574434"
            d="M6 9l6 6 6-6"
          />
        </svg>
      </summary>
      <div
        class="jsx-93118647 content"
      />
    </details>
  </div>
</div>
`;
